# falcor-neural

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  dependencies.xml
Source/Falcor/: CMakeLists.txt
Source/Falcor/Core/: Testbed.cpp  Testbed.h
Source/Falcor/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h
Source/Falcor/Scene/: HitInfo.slang  IScene.h  SceneTypes.slang  ShadingData.slang  TriangleMesh.cpp
Source/Mogwai/: Mogwai.cpp  Mogwai.h  MogwaiScripting.cpp
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/AccumulatePhotonsRTX/: AccumulatePhotons.rt.slang  AccumulatePhotonsRTX.cpp  AccumulatePhotonsRTX.h  CMakeLists.txt  DebugCounters.slang  Finalize.cs.slang  FinalizeBuffer.cs.slang  FinalizeTexture.cs.slang  PhotonSearch.rt.slang  Preparation.cs.slang  PreparePhotons.cs.slang  QuerySearch.rt.slang  Reservoir.slang  StochasticPhotonSearch.rt.slang  StochasticQuerySearch.rt.slang  Structs.slang  Visualize.cs.slang
Source/RenderPasses/BufferToTexture/: BufferToTexture.cpp  BufferToTexture.cs.slang  BufferToTexture.h  CMakeLists.txt
Source/RenderPasses/DebugQueryBuffer/: CMakeLists.txt  DebugQueryBuffer.cpp  DebugQueryBuffer.cs.slang  DebugQueryBuffer.h
Source/RenderPasses/ErrorMeasurePass/: ErrorMeasurePass.cpp
Source/RenderPasses/FLIPPass/: FLIPPass.cpp
Source/RenderPasses/NRC/: CMakeLists.txt  FactorizeOutput.cs.slang  Inference.cu  NRC.cpp  NRC.cu  NRC.cuh  NRC.h  NRC.slang  OutputsToTexture.cs.slang  QueriesToInputs.cs.slang  TCNNBridge.cu  TCNNBridge.h
Source/RenderPasses/PathTracerQuery/: CMakeLists.txt  PathState.slang  PathTracer.slang  PathTracerNRD.slang  (+4 more)
Source/Testbeds/: CMakeLists.txt  PhotonNRCPaper.cpp  Testbed.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/Testbeds/: CMakeLists.txt  TestSPPM.cpp
scenes/: ajar_caustic.glb  cornell_box.pyscene  cornell_box_bunny.pyscene  cornell_box_caustic.pyscene  cornell_box_caustic_animated.pyscene  glass.pyscene  minimal.pyscene  rings.pyscene
scenes/kitchen/: kitchen.pbrt
scenes/veach-ajar/: veach-ajar.pbrt
scripts/: PhotonNRCPaper.py  SPPM.py  SlangMLP.py  SlangNRC.py  benchmarkSlangNRC.py
(+86 files in other folders)
